--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <li>
                       <a
                         class="dropdown-item"
-                        href="./probando.html"
+                        href="./CrearProyecto.html"
                         type="button"
                       >
                         Crear proyecto
@@ -109,10 +109,28 @@
                     <li>
                       <a
                         class="dropdown-item"
+                        href="./ModificarProyecto.html"
+                        type="button"
+                      >
+                        Modificar proyecto
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        class="dropdown-item"
                         href="./probando.html"
                         type="button"
                       >
-                        Visualizar proyecto
+                        Busqueda proyecto
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        class="dropdown-item"
+                        href="./AsociarClienteProyecto.html"
+                        type="button"
+                      >
+                        Asociar cliente con proyecto
                       </a>
                     </li>
                     <li>
