hice generar reportes y mostrar factura

--- a/CrearCliente.html
+++ b/CrearCliente.html
@@ -96,6 +96,9 @@
                   placeholder="name@example.com"
                 />
               </div>
+              <a type="button" class="btn btn-outline-dark" href="./index.html">
+                ⬅️ Volver
+              </a>
               <a type="button" class="btn btn-outline-dark" href="">
                 ✅ Aceptar
               </a>
