--- a/EliminarCliente .html
+++ b/EliminarCliente .html
@@ -63,7 +63,9 @@
                   placeholder="123"
                 />
               </div>
-
+              <a type="button" class="btn btn-outline-dark" href="./index.html">
+                ⬅️ Volver
+              </a>
               <a type="button" class="btn btn-outline-dark" href="">
                 🚮 Eliminar 
               </a>
