--- a/GenerarReporte.html
+++ b/GenerarReporte.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>🤝 Asociar Clientes y Proyectos</title>
+    <title>📄 Generar Reportes</title>
   </head>
   <body>
     <!-- Navbar -->
@@ -47,27 +47,39 @@
                 width="25"
               />
             </div>
-            <div class="col-5">
+            <div class="col-3">
               <br />
               <br />
               <div class="container">
                 <div class="row row-cols-5">
                   <div class="col">Id</div>
-                  <div class="col">Nombre cliente</div>
+                  <div class="col">Nombre Cliente</div>
                 </div>
               </div>
+              <hr />
             </div>
-            <div class="col-5">
+            <div class="col-3">
               <br />
               <br />
               <div class="container">
                 <div class="row row-cols-5">
                   <div class="col">Id</div>
-                  <div class="col">Nombre proyecto</div>
+                  <div class="col">Nombre Cliente</div>
                 </div>
               </div>
+              <hr />
             </div>
-            <hr />
+            <div class="col-3">
+              <br />
+              <br />
+              <div class="container">
+                <div class="row row-cols-5">
+                  <div class="col">Id</div>
+                  <div class="col">Nombre Cliente</div>
+                </div>
+              </div>
+              <hr />
+            </div>
           </div>
           <a type="button" class="btn btn-outline-dark" href="./index.html">
             ⬅️ Volver
