--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   </ul>
                 </div>
                 <!-- ----- -->
-                <!-- Boton Reportes -->
+                <!-- Boton factura -->
                 <div class="btn-group">
 
                   <button
@@ -161,7 +161,7 @@
                     <li>
                       <a
                         class="dropdown-item"
-                        href="./probando.html"
+                        href="./MostrarFactura.html"
                         type="button"
                       >
                         Mostrar Facturas
@@ -184,7 +184,7 @@
                   <li>
                     <a
                       class="dropdown-item"
-                      href="./probando.html"
+                      href="./GenerarReporte.html"
                       type="button"
                     >
                       Generar Reporte
