--- a/MostrarFactura.html
+++ b/MostrarFactura.html
@@ -1,3 +1,4 @@
+<!-- Falta agregador los botones en la columna acciones -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>🤝 Asociar Clientes y Proyectos</title>
+    <title>🗒️ Mostrar Facturas</title>
   </head>
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="/index.html"
-          >Sistema de gestión de Clientes</a
+          >Sistema de gestión de clientes</a
         >
         <button
           class="navbar-toggler"
@@ -38,41 +39,60 @@
       <section>
         <div class="container">
           <div class="row my-2">
-            <div class="col-1">
+            <div class="col-2">
               <br />
               <img
-                src="./img/asociar.png"
+                src="./img/factura.png"
                 class="d-block w-100"
-                alt="imagen crear Usuario"
+                alt="imagen crear cliente"
                 width="25"
               />
             </div>
-            <div class="col-5">
+            <div class="col-8">
+              <br />
+              <h2 class="row my-2">Mostrar Factura</h2>
+              <div class="col-mb-7">
+                <label for="exampleFormControlInput1" class="form-label"
+                  >Id Cliente</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="exampleFormControlInput1"
+                  placeholder="123"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label"
+                  >Id Usuario</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="exampleFormControlInput1"
+                  placeholder="123"
+                />
+              </div>
+              <a type="button" class="btn btn-outline-dark" href="">
+                🔍 Buscar
+              </a>
               <br />
               <br />
               <div class="container">
-                <div class="row row-cols-5">
-                  <div class="col">Id</div>
-                  <div class="col">Nombre cliente</div>
+                <div class="row row-cols-10">
+                  <div class="col">Cliente</div>
+                  <div class="col">Nombre del proyecto</div>
+                  <div class="col">Acciones</div>
                 </div>
               </div>
-            </div>
-            <div class="col-5">
               <br />
-              <br />
-              <div class="container">
-                <div class="row row-cols-5">
-                  <div class="col">Id</div>
-                  <div class="col">Nombre proyecto</div>
-                </div>
-              </div>
+              <hr />
+
+              <a type="button" class="btn btn-outline-dark" href="">
+                ⬅️ Volver
+              </a>
             </div>
-            <hr />
           </div>
-          <a type="button" class="btn btn-outline-dark" href="./index.html">
-            ⬅️ Volver
-          </a>
-          <a type="button" class="btn btn-outline-dark" href=""> 🤝 Asociar </a>
         </div>
       </section>
     </main>
