--- a/VisualizarCliente.html
+++ b/VisualizarCliente.html
@@ -72,6 +72,9 @@
                   placeholder="99.999.999"
                 />
               </div>
+              <a type="button" class="btn btn-outline-dark" href="./index.html">
+                ⬅️ Volver
+              </a>
               <a type="button" class="btn btn-outline-dark" href="">
                 🔍 Buscar
               </a>
